2008-09-04  Dan Bernstein  <mitz@apple.com>

        - roll out r36050 because it made svg/custom/invalid-fill-hex.svg fail,
          and fixing https://bugs.webkit.org/show_bug.cgi?id=15360 appears to
          require a different approach

        * css1/color_and_background/invalid_color-expected.txt: Removed.
        * css1/color_and_background/invalid_color.html: Removed.

2008-09-04  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        - test for https://bugs.webkit.org/show_bug.cgi?id=19717
          <rdar://problem/6026832> REGRESSION (r31876): menu items render horizontally at the Economist

        * fast/block/positioning/move-with-auto-width.html: Added.
        * platform/mac/fast/block/positioning/move-with-auto-width-expected.checksum: Added.
        * platform/mac/fast/block/positioning/move-with-auto-width-expected.png: Added.
        * platform/mac/fast/block/positioning/move-with-auto-width-expected.txt: Added.

2008-09-04  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Cameron Zwarich.
        
        Test for <rdar://problem/6193925> REGRESSION: Crash occurs at
        KJS::Machine::privateExecute() when attempting to load my Mobile Gallery
        (http://www.me.com/gallery/#home)
        
        also
        
        https://bugs.webkit.org/show_bug.cgi?id=20633 Crash in privateExecute
        @ cs.byu.edu

        * fast/js/pic/dictionary-prototype-expected.txt: Added.
        * fast/js/pic/dictionary-prototype.html: Added.

2008-09-03  Mark Rowe  <mrowe@apple.com>

        Update layout test results after recent canvas changes.

        * fast/canvas/canvas-invalid-fillstyle-expected.txt:
        * fast/canvas/canvas-invalid-strokestyle-expected.txt:
        * fast/canvas/drawImage-with-negative-source-destination-expected.txt:
        * fast/dom/Window/window-properties-expected.txt:

2008-09-03  Dean Jackson  <dino@apple.com>

        Reviewed by Dave Hyatt.
