@@ -1,0 +1,12 @@
+<head>
+    <script src="repaint.js" type="text/javascript"></script>
+    <script>
+        function repaintTest()
+        {
+            document.getElementById("target").style.backgroundColor = "lightpink";
+        }
+    </script>
+</head>
+<body onload="runRepaintTest()">
+    <button id="target" style="height: 100px; width: 100px; background-color: lightblue; border: none;">&nbsp;</button>
+</body>
